jenkins 설치문서 수정

--- a/kubeadm/04.jenkins-install.md
+++ b/kubeadm/04.jenkins-install.md
@@ -10,7 +10,7 @@ Kubernetes Pod가 아닌 **Linux 서버에 Jenkins를 직접 설치**하고, 소
 2. [사전 요구사항](#사전-요구사항)
 3. [1단계: Java 21 설치](#1단계-java-21-설치)
 4. [2단계: Jenkins 저장소 추가 및 설치](#2단계-jenkins-저장소-추가-및-설치)
-5. [3단계: Jenkins 홈 디렉토리 및 서비스 설정](#3단계-jenkins-홈-디렉토리-및-서비스-설정)
+5. [3단계: Jenkins 서비스 설정](#3단계-jenkins-서비스-설정)
 6. [4단계: Jenkins 서비스 시작 및 방화벽](#4단계-jenkins-서비스-시작-및-방화벽)
 7. [5단계: 초기 비밀번호 확인 및 웹 접속](#5단계-초기-비밀번호-확인-및-웹-접속)
 8. [6단계: Jenkins 기본 설정 및 플러그인](#6단계-jenkins-기본-설정-및-플러그인)
@@ -133,19 +133,12 @@ rpm -q jenkins
 
 ---
 
-## 3단계: Jenkins 홈 디렉토리 및 서비스 설정
+## 3단계: Jenkins 서비스 설정
 
-기본 `/var/lib/jenkins` 대신 `/data/jenkins`를 사용하도록 변경합니다.
+기본 JENKINS_HOME(`/var/lib/jenkins`)을 사용합니다. Java 21을 사용하도록 systemd override만 추가합니다.
 
 ```bash
-# 1. Jenkins 데이터 디렉토리 생성
-sudo mkdir -p /data/jenkins
-sudo chown -R jenkins:jenkins /data/jenkins
-
-# 2. systemd 서비스에서 JENKINS_HOME 변경
-sudo sed -i 's|Environment="JENKINS_HOME=/var/lib/jenkins"|Environment="JENKINS_HOME=/data/jenkins"|g' /usr/lib/systemd/system/jenkins.service
-
-# 3. Java 21 사용하도록 override 추가
+# 1. Java 21 사용하도록 override 추가
 sudo mkdir -p /etc/systemd/system/jenkins.service.d
 sudo tee /etc/systemd/system/jenkins.service.d/override.conf > /dev/null <<EOF
 [Service]
@@ -153,17 +146,17 @@ Environment="JAVA_HOME=/usr/lib/jvm/java-21-openjdk"
 Environment="JENKINS_JAVA_CMD=/usr/lib/jvm/java-21-openjdk/bin/java"
 EOF
 
-# 4. systemd 재로드
+# 2. systemd 재로드
 sudo systemctl daemon-reload
 
-# 5. 설정 확인
+# 3. 설정 확인
 sudo systemctl cat jenkins.service | grep -E "JENKINS_HOME|JAVA"
 ```
 
 **예상 출력:**
 
 ```
-Environment="JENKINS_HOME=/data/jenkins"
+Environment="JENKINS_HOME=/var/lib/jenkins"
 Environment="JAVA_HOME=/usr/lib/jvm/java-21-openjdk"
 Environment="JENKINS_JAVA_CMD=/usr/lib/jvm/java-21-openjdk/bin/java"
 ```
@@ -204,13 +197,13 @@ sudo ss -tulpn | grep 8080
 
 ```bash
 # Jenkins가 완전히 기동할 때까지 대기
-until sudo test -f /data/jenkins/secrets/initialAdminPassword; do
+until sudo test -f /var/lib/jenkins/secrets/initialAdminPassword; do
   echo "대기 중..."
   sleep 5
 done
 
 echo "=== Jenkins 초기 관리자 비밀번호 ==="
-sudo cat /data/jenkins/secrets/initialAdminPassword
+sudo cat /var/lib/jenkins/secrets/initialAdminPassword
 echo "================================"
 ```
 
@@ -274,10 +267,10 @@ Jenkins에서 `kubectl apply`를 쓰려면 Jenkins 사용자에게 kubeconfig를
 
 ```bash
 # 클러스터 노드의 kubeconfig를 Jenkins 사용자 홈에 복사
-sudo mkdir -p /data/jenkins/.kube
-sudo cp ~/.kube/config /data/jenkins/.kube/config
-sudo chown -R jenkins:jenkins /data/jenkins/.kube
-sudo chmod 600 /data/jenkins/.kube/config
+sudo mkdir -p /var/lib/jenkins/.kube
+sudo cp ~/.kube/config /var/lib/jenkins/.kube/config
+sudo chown -R jenkins:jenkins /var/lib/jenkins/.kube
+sudo chmod 600 /var/lib/jenkins/.kube/config
 
 # Jenkins 사용자로 테스트
 sudo -u jenkins kubectl get nodes
@@ -299,10 +292,25 @@ sudo -u jenkins docker ps
 ```bash
 sudo dnf install -y maven
 mvn -version
-sudo -u jenkins mvn -version
+# jenkins 사용자로 확인 시 시스템 Maven 경로 사용 (다른 사용자 경로와 혼동 방지)
+sudo -u jenkins /usr/bin/mvn -version
 ```
 
 Jenkins **Global Tool Configuration**에서 Maven 자동 설치를 쓰거나, 위처럼 시스템 Maven을 사용할 수 있습니다.
+
+**jenkins로 `mvn` 실행 시 `cd: /home/... 디렉터리가 아닙니다` 오류가 나는 경우:**  
+다른 사용자(예: jnet)의 Maven 스크립트나 `MAVEN_HOME`이 PATH에 섞여 있을 수 있습니다. 다음을 확인하세요.
+
+```bash
+# 시스템 Maven만 사용하는지 확인
+which mvn
+ls -la /usr/bin/mvn
+
+# jenkins는 반드시 시스템 Maven 경로로 실행
+sudo -u jenkins /usr/bin/mvn -version
+```
+
+Jenkins 파이프라인에서 Maven을 쓸 때는 **Global Tool Configuration**에서 Maven 자동 설치를 쓰거나, `sh '/usr/bin/mvn clean package'` 처럼 절대 경로를 지정하면 같은 오류를 피할 수 있습니다.
 
 ---
 
@@ -378,7 +386,7 @@ java -version 2>&1 | head -1
 echo "=== Jenkins 서비스 ==="
 sudo systemctl is-active jenkins
 echo "=== Jenkins 홈 ==="
-ls -la /data/jenkins/ | head -5
+ls -la /var/lib/jenkins/ | head -5
 echo "=== Jenkins URL ==="
 echo "http://$(hostname -I | awk '{print $1}'):8080"
 ```
@@ -394,9 +402,9 @@ echo "http://$(hostname -I | awk '{print $1}'):8080"
 | 항목 | 내용 |
 |------|------|
 | 설치 방식 | Linux 직접 설치 (systemd, dnf) |
-| JENKINS_HOME | /data/jenkins |
+| JENKINS_HOME | /var/lib/jenkins (기본값) |
 | 접속 URL | http://\<서버IP\>:8080 |
-| 초기 비밀번호 | `sudo cat /data/jenkins/secrets/initialAdminPassword` |
+| 초기 비밀번호 | `sudo cat /var/lib/jenkins/secrets/initialAdminPassword` |
 | agent | agent any (동일 서버에서 빌드) |
 
 - **기존 K8s Jenkins 제거:** 문서 상단 [기존 Jenkins Pod 완전 삭제](#기존-jenkins-pod-완전-삭제-kubernetes-사용-중이었던-경우) 참고
