Update Jenkins deployment guide with revised registry and access URLs

--- a/kubeadm/02.docker-registry.md
+++ b/kubeadm/02.docker-registry.md
@@ -316,7 +316,7 @@ kubectl delete pod hello-registry -n demo
 
 04번 문서(Linux 직접 설치)의 Jenkins 가이드에 따라 구성한 Jenkins의 Jenkinsfile에서 `REGISTRY`를 이 Registry 주소로 설정하면 됩니다.
 
-- **Registry가 kubeadm 노드와 같은 서버인 경우:** `REGISTRY = '서버IP:5000'` (예: `192.168.1.100:5000`)
+- **Registry가 kubeadm 노드와 같은 서버인 경우:** `REGISTRY = '서버IP:5000'` (예: `172.16.0.194:5000`)
 - Jenkins에서 Docker로 빌드·push하므로, **Jenkins가 실행되는 호스트**에서 해당 주소로 접근 가능해야 하고, 인증서를 신뢰하거나 `--insecure-registry`로 접근할 수 있어야 합니다.
 
 Jenkins Credentials에 Docker Registry 계정을 등록합니다.
@@ -329,7 +329,7 @@ Jenkins Credentials에 Docker Registry 계정을 등록합니다.
 Jenkinsfile 예시:
 ```groovy
 environment {
-  REGISTRY = '192.168.1.100:5000'   // 실제 Registry 서버 IP:5000으로 변경
+  REGISTRY = '172.16.0.194:5000'   // 실제 Registry 서버 IP:5000으로 변경
   IMAGE_NAME = 'myapp'
 }
 ```
@@ -340,7 +340,7 @@ environment {
 
 | 항목 | 내용 |
 |------|------|
-| Registry URL | `https://<서버IP>:5000` |
+| Registry URL | `https://172.16.0.194:5000` |
 | 기본 사용자 | admin / admin123 (변경 권장) |
 | 데이터 디렉토리 | `/data/docker-registry/data` |
 | 인증서 | `/data/docker-registry/certs` (자체 서명, 개발/내부용) |
