--- a/kubeadm/04.jenkins-install.md
+++ b/kubeadm/04.jenkins-install.md
@@ -207,7 +207,7 @@ sudo cat /var/lib/jenkins/secrets/initialAdminPassword
 echo "================================"
 ```
 
-**접속 URL:** `http://<서버IP>:8080`
+**접속 URL:** `http://172.16.0.194:8080`
 
 ```bash
 SERVER_IP=$(hostname -I | awk '{print $1}')
@@ -252,7 +252,7 @@ Jenkins를 Kubernetes 클러스터에서 에이전트 Pod를 띄우려면:
 
 - **Manage Jenkins** → **Nodes** → **Configure Clouds** → **Kubernetes**
 - Kubernetes URL: `https://<API서버주소>`
-- Jenkins URL: `http://<이 서버 IP>:8080`
+- Jenkins URL: `http://172.16.0.194:8080`
 - Credentials: kubeconfig 또는 서비스 계정 토큰
 
 Linux 직접 설치 시에는 **agent any** 로 같은 서버에서 빌드하는 구성이 일반적입니다.
@@ -403,7 +403,7 @@ echo "http://$(hostname -I | awk '{print $1}'):8080"
 |------|------|
 | 설치 방식 | Linux 직접 설치 (systemd, dnf) |
 | JENKINS_HOME | /var/lib/jenkins (기본값) |
-| 접속 URL | http://\<서버IP\>:8080 |
+| 접속 URL | http://172.16.0.194:8080 |
 | 초기 비밀번호 | `sudo cat /var/lib/jenkins/secrets/initialAdminPassword` |
 | agent | agent any (동일 서버에서 빌드) |
 
