--- a/kubeadm/06.manual.md
+++ b/kubeadm/06.manual.md
@@ -25,10 +25,10 @@
 |----------|-----------|----------------|
 | Kubernetes | kubeadm (Rocky + containerd) | 01문서 전부, `kubectl get nodes` |
 | kubectl | 01 또는 04 문서의 "설치 전 확인" | `kubectl version --client` |
-| Docker Registry | 02: Docker 컨테이너 (registry:2) | `docker ps \| grep registry`, https://\<노드IP\>:5000 |
+| Docker Registry | 02: Docker 컨테이너 (registry:2) | `docker ps \| grep registry`, https://172.16.0.194:5000 |
 | GitLab (선택) | 03: Kubernetes(Helm) 또는 Docker | 03 "GitLab 서버 설치" 절 |
 | Git 클라이언트 | 03: dnf / 공식 설치 프로그램 | `git --version` |
-| Jenkins | 04: Linux 직접 설치 (systemd) | `sudo systemctl status jenkins`, http://\<서버IP\>:8080 |
+| Jenkins | 04: Linux 직접 설치 (systemd) | `sudo systemctl status jenkins`, http://172.16.0.194:8080 |
 | Argo CD | 05: manifest install.yaml | `kubectl get pods -n argocd`, Argo CD UI |
 | Argo CD CLI | 05: 1-4절 (Linux/Windows/macOS) | `argocd version --client` |
 | Tomcat WAR 앱 | 07: Dockerfile + Deployment/Service | `kubectl get pods -n dev` |
