Update deployment documentation to include Argo CD integration and remove deprecated h-cms deployment configuration

--- a/kubeadm/06.manual.md
+++ b/kubeadm/06.manual.md
@@ -16,6 +16,7 @@
 | 06 | 06.manual.md | 종합 메뉴얼 (본 문서) |
 | 07 | 07.tomcat-war-deploy.md | Tomcat + WAR Kubernetes 배포 (이미지 빌드·Deployment·Service) |
 | 08 | 08.jenkins-tomcat-deploy.md | Jenkins로 Tomcat WAR 빌드·배포 (04+07 연계) |
+| 09 | 09.jenkins-argocd-deploy.md | Jenkins 빌드 이미지를 Argo CD로 Kubernetes Pod 배포 (08+05 연계) |
 
 ---
 
@@ -33,6 +34,7 @@
 | Argo CD CLI | 05: 1-4절 (Linux/Windows/macOS) | `argocd version --client` |
 | Tomcat WAR 앱 | 07: Dockerfile + Deployment/Service | `kubectl get pods -n dev` |
 | Jenkins → Tomcat 배포 | 08: 04+07 연계 (WAR 빌드 → 이미지 푸시 → kubectl 배포) | 08번 문서 6단계 확인 |
+| Jenkins → Argo CD 배포 | 09: 08 이미지 푸시 + Git 반영 → Argo CD가 Pod 배포 | 09번 문서 5단계 확인 |
 
 ---
 
