--- a/kubeadm/08.jenkins-tomcat-deploy.md
+++ b/kubeadm/08.jenkins-tomcat-deploy.md
@@ -763,4 +763,4 @@ kubectl rollout status deployment/h-cms -n dev
 | 6    | Console·Registry·kubectl·브라우저로 배포 결과 확인                             |
 
 - **기존 기능 유지**: 01·02·04·07번 문서의 구성(클러스터, Registry, Jenkins, Tomcat 배포)은 그대로 두고, Jenkins만 WAR 빌드 → 이미지 푸시 → Kubernetes 배포까지 연결한 형태입니다.
-- **확장**: 05번 Argo CD와 연동하려면, Jenkins는 이미지 푸시만 하고 이미지 태그는 Git(Helm/Kustomize 등)에 반영한 뒤 Argo CD가 배포하도록 구성할 수 있습니다.
+- **확장**: 05번 Argo CD와 연동하려면 **09번 문서** [Jenkins 빌드 이미지를 Argo CD로 Kubernetes Pod 배포 가이드](09.jenkins-argocd-deploy.md)를 참고하세요. Jenkins는 이미지 푸시만 하고 이미지 태그를 Git에 반영한 뒤 Argo CD가 Pod로 배포하도록 구성할 수 있습니다.
